<resources>
    <string name="app_name">Property</string>
    <string name="sign_in">Sign In</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sent_link">Sent Link</string>
    <string name="call">Call</string>
    <string name="start">Start</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="Upload_ID">Upload ID</string>
    <string name="bank_details">Bank Details</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="user_id">User ID</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="my_property">My Property</string>
    <string name="ChangePassword">Change Password</string>
    <string name="my_earnings">My Earnings</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="request">Request</string>
    <string name="earning_details">Earning Details</string>
    <string name="filter">Filter</string>
    <string name="property_code">Property Code : </string>
    <string name="rented_out_this_property">Rented out this property</string>
    <string name="view_property">View Property</string>
    <string name="payment_details">Payment Details</string>
    <string name="InHandCash">Cash In Hand </string>
    <string name="SAR">SAR 0</string>
    <string name="users">User\'s</string>
    <string name="Ongoing">Ongoing</string>
    <string name="property_name">Property Name</string>
    <string name="profile_name">Profile Name</string>
    <string name="OngoingDeal">Ongoing Deal</string>
    <string name="appartment_for_rent">Property for Rent</string>
    <string name="appartment_for_sale">Property for Sale</string>
    <string name="features">Features</string>
    <string name="Bookingdetails">Booking Details</string>
    <string name="select_checkin_date">Select Checkin Date</string>
    <string name="select_checkout_date">Select Checkout Date</string>
    <string name="reservation_amount">Reservation Amount</string>
    <string name="Status">Status</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="online_banking">Online Banking</string>
    <string name="VisitProperty">Visit Property</string>
    <string name="CompletedDeal">Completed Deal</string>
    <string name="UserContract">User Contract</string>
    <string name="read_contract">Read Contract</string>
    <string name="contract_period">Contract Period : </string>
    <string name="to">to</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_properties">My Properties</string>
    <string name="in_hand_cash">In Hand Cash</string>
    <string name="qr_reader">QR Reader</string>
    <string name="upload_license">Upload License</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="client">Client</string>
    <string name="my_task">My Task</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="owner">Owner</string>
    <string name="OwnerName">Owner Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_contract">Owner Contract</string>
    <string name="owner_register">Owner Register</string>
    <string name="property_registered">Property Registered</string>
    <string name="complete">Complete</string>
    <string name="edit_details">Edit Details</string>
    <string name="pending">Balance</string>
    <string name="lorem_ipsum_new">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="notification">Notification</string>
    <string name="heading">Heading</string>
    <string name="receive">Receive</string>
    <string name="not_receive">Not Receive</string>
    <string name="PropertyAppointment">Property Appointment</string>
    <string name="RentalProperty">Rental Property</string>
    <string name="view_property_details">View Property Details</string>
    <string name="Pricing">Pricing</string>
    <string name="Rent">Rent</string>
    <string name="SecurityDeposit">Security Deposit</string>
    <string name="ReservationBookingAmount">Reservation / Booking Amount </string>
    <string name="visitor_name">Visitor Name</string>
    <string name="view_profile">View Profile</string>
    <string name="visit_status">Visit Status</string>
    <string name="visit_started">Visit Started</string>
    <string name="property_visited">Property Visited</string>
    <string name="proceed_to_book">Proceed to Book</string>
    <string name="pay_reservation_amount">Pay Reservation Amount</string>
    <string name="request_for_contract">Request for Contract</string>
    <string name="full_payment_key_handover">Full Payment / Key Handover</string>
    <string name="not_interested">Not Interested</string>
    <string name="view_packages">View Packages</string>
    <string name="BookProperty">Book Property</string>
    <string name="choose_package">Choose Package</string>
    <string name="reservation_amount_new">Reservation Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="if_net_banking_banking"># If Net Banking / Banking</string>
    <string name="if_cash"># If Cash</string>
    <string name="upload_bill">Upload Bill</string>
    <string name="pending_amount">Pending Amount :</string>
    <string name="check_in_date">Check in Date</string>
    <string name="_28_11_2020">28-11-2020</string>
    <string name="check_out_date">Check out Date</string>
    <string name="number_of_payments">Number of Payments</string>
    <string name="view_details">View Details</string>
    <string name="payable_months">Payable Months</string>
    <string name="january_payment_2020">January Payment 2020</string>
    <string name="payed">Paid</string>
    <string name="june_payment_2020">June Payment 2020</string>
    <string name="january_payment_2021">January Payment 2021</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="request_contract">Request Contract</string>
    <string name="edit">Edit</string>
    <string name="MyProperty">My Property</string>
    <string name="anne_e_chavez">Anne E. Chavez</string>
    <string name="anneechavez_dayrep_com">anneechavez@dayrep.com</string>
    <string name="full_collen">:</string>
    <string name="_04">04</string>
    <string name="p_12345">P 12345</string>
    <string name="sar_10_000">SAR 10,000</string>
    <string name="sar_4_500">SAR 4,500</string>
    <string name="sar_20_000">SAR 20,000</string>
    <string name="sar_10000">SAR 0.00</string>
    <string name="_2bkh">2BKH</string>
    <string name="_4_5">4.5</string>
    <string name="_125_rating">125 Rating</string>
    <string name="al_quwaiiyah">Al Quwaiiyah</string>
    <string name="_03">03</string>
    <string name="_115_sq_m">115 sq. M.</string>
    <string name="fully">Fully</string>
    <string name="_02">02</string>
    <string name="_15_05_2021">15 - 05 - 2021</string>
    <string name="_50">50</string>
    <string name="total_assigned_properties">Total Assigned Properties</string>
    <string name="zone">Zone</string>
    <string name="today_s_appoinment">Today\'s Appointment :</string>
    <string name="_10">10</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="rent_overdue">Rent Overdue</string>
    <string name="property_id">Property ID</string>
    <string name="due_amount">Due Amount</string>
    <string name="view_all">View All</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="full_name">Full Name</string>
    <string name="paid_by">Paid by</string>
    <string name="jayanth">Jayanth</string>
    <string name="sar_1000">SAR 1000</string>
    <string name="building_name">Building Name</string>
    <string name="request_from">Request from</string>
    <string name="user">User</string>
    <string name="task_heading">Task Heading</string>
    <string name="_20_05_2020">20 - 05 - 2020</string>
    <string name="_5_20_pm">5:20 pm</string>
    <string name="xxx">xxx</string>
    <string name="_15_05_2020">15 - 05 - 2020</string>
    <string name="apartment_for_rent">Property for rent</string>
    <string name="buraydah_52385_saudi_arabia">Buraydah 52385 saudi arabia</string>
    <string name="completed">Completed</string>
    <string name="exitapp">Exit</string>
    <string name="areyousure"> Are you sure</string>
    <string name="riyadh">Riyadh</string>
    <string name="_10_00am">10:00 am</string>
    <string name="start_tour">Start Tour</string>
    <string name="my_request">My Request</string>
    <string name="my_client">My Client</string>
    <string name="p_1234">P-1234</string>
    <string name="start_visit">Start Visit</string>
    <string name="edit_submit_details">Edit/Submit Details</string>
    <string name="property_verified">Property Verified</string>
    <string name="visit_property">Visit Property</string>
    <string name="thomasmbain_dayrep_com">ThomasMBain@dayrep.com</string>
    <string name="add_tiltle">Add title</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="calendar">Calender</string>
    <string name="demo_gmail_com">demo@gmail.com</string>
    <string name="property">Property</string>
    <string name="payment">Payment</string>
    <string name="commercial">Commercial</string>
    <string name="residential">Residential</string>
    <string name="filtter">Filter</string>
    <string name="buildings">Buildings</string>
    <string name="_2545220">#2545220</string>
    <string name="residential_building">Residential Building</string>
    <string name="net_worth">Rent Value</string>
    <string name="sar_200_00">SAR 200.00</string>
    <string name="income">Received</string>
    <string name="sar_520_00">SAR 520.00</string>
    <string name="outstanding_deu">Last dues</string>
    <string name="sar_845_00">SAR 845.00</string>
    <string name="sar_4587_00">SAR 4587.00</string>
    <string name="vacant">Vacant</string>
    <string name="_06">06</string>
    <string name="hide_appartment">Hide Appartment</string>
    <string name="occupied">Occupied</string>
    <string name="Appartment">Appartment</string>
    <string name="number_of_appartments">Number of Appartments</string>
    <string name="left_param">(</string>
    <string name="right_param">)</string>
    <string name="occupied_properties">Occupied Properties</string>
    <string name="vacant_properties">Vacant Properties</string>
    <string name="revenue">Revenue</string>
    <string name="sar_50_00">SAR 50.00</string>
    <string name="occupied_from">Occupied from</string>
    <string name="occupied_to">Occupied to</string>
    <string name="add_property">Add Property</string>
    <string name="tvMElectricityBill">Electricity Bill</string>
    <string name="tvMElectricityBillAmount">SAR 10,00,000</string>
    <string name="tvMElectricityBillCondition">Lorem Ipsum is simply dummy text of the printing  and typesetting industry. Lorem Ipsum</string>
</resources>