<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/reservation_amount"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/full_collen"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_5dp"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/SAR"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/Status"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/full_collen"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_5dp"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/payed"
                    android:textColor="@color/color_accent_green"
                    android:textSize="@dimen/text_size_13sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/PaymentMode"
                    android:textColor="@color/color_accent_grey"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/full_collen"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_5dp"
                    android:textColor="@color/color_accent_grey"
                    android:textSize="@dimen/text_size_15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/heebo_medium"
                    android:text="@string/online_banking"
                    android:textColor="@color/color_accent_grey"
                    android:textSize="@dimen/text_size_13sp" />

            </LinearLayout>


        </LinearLayout>

    </FrameLayout>


</merge>