<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/heebo_medium"
                        android:text="@string/building_name"
                        android:textColor="@color/color_accent_grey_light_new"
                        android:textSize="@dimen/text_size_14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4dp"
                        android:drawableStart="@drawable/ic_location"
                        android:drawablePadding="@dimen/margin_10dp"
                        android:fontFamily="@font/heebo_medium"
                        android:text="@string/al_quwaiiyah"
                        android:textColor="@color/color_accent_grey"
                        android:textSize="@dimen/text_size_14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/number_of_appartments"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_10dp"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/left_param"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/_10"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/right_param"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/_04"
                            android:textColor="@color/color_accent_green"
                            android:textSize="@dimen/text_size_12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_5dp"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/occupied_properties"
                            android:textColor="@color/color_accent_green"
                            android:textSize="@dimen/text_size_12sp" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/margin_5dp"
                            android:layout_marginTop="@dimen/margin_2dp"
                            android:layout_marginBottom="@dimen/margin_2dp"
                            android:background="@color/color_accent_grey" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_7dp"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/_06"
                            android:textColor="@color/color_accent_yellow"
                            android:textSize="@dimen/text_size_12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_5dp"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/vacant_properties"
                            android:textColor="@color/color_accent_yellow"
                            android:textSize="@dimen/text_size_12sp" />

                    </LinearLayout>

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_propert_details_recycerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_10dp"
                    android:background="@color/color_accent_grey_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_5dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/heebo_bold"
                        android:text="@string/revenue"
                        android:textColor="@color/color_accent_grey_new"
                        android:textSize="@dimen/text_size_16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/net_worth"
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="  :  "
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/sar_200_00"
                            android:textColor="@color/color_accent_grey_new"
                            android:textSize="@dimen/text_size_13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/income"
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="  :  "
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/sar_50_00"
                            android:textColor="@color/color_accent_grey_new"
                            android:textSize="@dimen/text_size_13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/outstanding_deu"
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="  :  "
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/sar_50_00"
                            android:textColor="@color/color_accent_grey_new"
                            android:textSize="@dimen/text_size_13sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/margin_3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="@string/pending"
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_medium"
                            android:text="  :  "
                            android:textColor="@color/color_accent_grey_light_new"
                            android:textSize="@dimen/text_size_13sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/heebo_bold"
                            android:text="@string/sar_50_00"
                            android:textColor="@color/color_accent_grey_new"
                            android:textSize="@dimen/text_size_13sp" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>


</FrameLayout>